[package]
name = "rust-algorand-sdk"
version = "0.1.0"
authors = ["pawanjay176 <pawandhananjay@gmail.com>"]
edition = "2018"

[dependencies]
ring = "0.14.6"
sha2 = "0.8"
data-encoding = "2.1.2"
arrayref = "0.3.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
rmp-serde = "0.13"
[dependencies.ed25519-dalek]
version = "0.9.1"
features = ["serde"]